# autoresearch

./: .gitignore  LICENSE  README.md  claude_usage.sh  prepare.py  program.md  pyproject.toml  train.py  watcher.sh
