[project]
name = "autoresearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"torch",
	"torchvision",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cuda" },
]
torchvision = [
    { index = "pytorch-cuda" },
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
